# godstream

./: Cargo.toml
assets/: egyptian_anubis.ally_unit.toml
assets/data/: stages.tilesheet.ron
assets/data/ally_units/: egyptian_anubis.ally_unit.ron  egyptian_bastet.ally_unit.ron  egyptian_horus.ally_unit.ron  egyptian_isis.ally_unit.ron  egyptian_osiris.ally_unit.ron  egyptian_ra.ally_unit.ron  egyptian_sekhmet.ally_unit.ron  egyptian_sobek.ally_unit.ron  egyptian_thoth.ally_unit.ron  greek_apollo.ally_unit.ron  greek_ares.ally_unit.ron  greek_artemis.ally_unit.ron  greek_athena.ally_unit.ron  greek_demeter.ally_unit.ron  greek_hades.ally_unit.ron  greek_hecate.ally_unit.ron  greek_poseidon.ally_unit.ron  greek_zeus.ally_unit.ron  norse_freyja.ally_unit.ron  norse_heimdall.ally_unit.ron  norse_hel.ally_unit.ron  norse_loki.ally_unit.ron  norse_njord.ally_unit.ron  norse_odin.ally_unit.ron  norse_skadi.ally_unit.ron  norse_thor.ally_unit.ron  norse_tyr.ally_unit.ron
assets/data/stages/: base_stages.stages.ron
assets/data/tilesheets/: base_tilesheets.tilesheets.ron
assets/data/units/: base_allies.units.ron
assets/sounds/music/: ambient_chimes.mp3.ron
assets/ui/: theme.json
assets/voxels/: tiles.vox
assets/voxels/ally_units/: egyptian_anubis.vox  egyptian_bastet.vox  egyptian_horus.vox  egyptian_isis.vox  egyptian_osiris.vox  egyptian_ra.vox  egyptian_sekhmet.vox  egyptian_sobek.vox  egyptian_thoth.vox  greek_apollo.vox  greek_ares.vox  greek_artemis.vox  greek_athena.vox  greek_demeter.vox  greek_hades.vox  greek_hecate.vox  greek_poseidon.vox  greek_zeus.vox  norse_freyja.vox  norse_heimdall.vox  norse_hel.vox  norse_loki.vox  norse_njord.vox  norse_odin.vox  norse_skadi.vox  norse_thor.vox  norse_tyr.vox
src/: main.rs  states.rs
src/audio/: background_music.rs  mod.rs
src/common/: constants.rs  markers.rs  mod.rs  resources.rs  spritesheet.rs
src/ui/: mod.rs
src/ui/components/: main_button.rs  mod.rs
src/ui/constants/: colors.rs  mod.rs
src/ui/routes/: mod.rs  my_route.rs
src/unit/: ally_unit.rs  domain.rs  mod.rs  pantheon.rs  resources.rs  unit.rs
src/units/: markers.rs  mod.rs  unit.rs
src/world/: markers.rs  mod.rs  resources.rs  stage.rs  tile.rs  tilesheet.rs
