[package]
name = "pantheon-roguelite"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1" }
bevy-inspector-egui = "0.25.2"
bevy_common_assets = { version = "0.11.0", features = ["ron"] }
bevy_ineffable = "0.6.0"
bevy_vox_scene = { git = "https://github.com/Utsira/bevy_vox_scene.git", branch = "main" }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
serde = "1.0.209"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
