[package]
name = "godstream"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
	"animation",
	"bevy_asset",
	"bevy_state",
	"bevy_color",
	"bevy_gilrs",
	"bevy_scene",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_pbr",
	"bevy_gltf",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"multi_threaded",
	"png",
	"hdr",
	"vorbis",
	"x11",
	"bevy_gizmos",
	"android_shared_stdcxx",
	"tonemapping_luts",
	"smaa_luts",
	"default_font",
	"webgl2",
	"sysinfo_plugin",
]}
bevy-inspector-egui = "0.25.2"
bevy_common_assets = { version = "0.11.0", features = ["ron"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
bevy_ineffable = "0.6.0"
bevy_kira_audio = { version = "0.20.0", default-features = false, features = ["mp3", "settings_loader"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
serde = "1.0.209"
sickle_ui = { git = "https://github.com/UmbraLuminosa/sickle_ui", branch = "main" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
